CJProcess: Added "--enable-preview" flag